--- a/ansible/playbooks/role-rocky-kojid.yml
+++ b/ansible/playbooks/role-rocky-kojid.yml
@@ -7,6 +7,7 @@
   - vars/vaults/encpass.yml
   - vars/common.yml
   - vars/kojid.yml
+  - vars/koji-common.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
   handlers:
