--- a/ansible/playbooks/vars/sigul_bridge.yml
+++ b/ansible/playbooks/vars/sigul_bridge.yml
@@ -3,13 +3,14 @@
 sigul_type: bridge
 sigul_ipa_realm: "ROCKYLINUX.ORG"
 sigul_bridge_cert_nickname: "sigul-bridge"
-sigul_principal: "sigul/{{ inventory_hostname }}@{{ sigul_ipa_realm }}"
+sigul_principal: "sigul/sigul.rockylinux.org@{{ sigul_ipa_realm }}"
 sigul_keytab: /etc/sigul.keytab
 sigul_nss_dir: /etc/pki/tls/sigul
 
 # ipa-getcert variables
-getcert_name: "{{ ansible_fqdn }}"
-getcert_owner: sigul
-getcert_nss_db_dir: "{{ sigul_nss_dir }}"
-getcert_nss_nickname: "{{ sigul_bridge_cert_nickname }}"
-getcert_nss: true
+ipa_getcert_nss: true
+ipa_getcert_requested_hostnames:
+  - name: "{{ ansible_fqdn }}"
+    owner: sigul
+    nss_db_dir: "{{ sigul_nss_dir }}"
+    nss_nickname: "{{ sigul_bridge_cert_nickname }}"
