--- a/ansible/playbooks/role-rocky-sigul-server.yml
+++ b/ansible/playbooks/role-rocky-sigul-server.yml
@@ -66,7 +66,7 @@
     - name: Enable the sigul server
       systemd:
         name: sigul_server
-        state: running
+        state: restarted
         enabled: true
 
     - name: Touching run file that ansible has ran here
