--- a/ansible/playbooks/vars/koji-common.yml
+++ b/ansible/playbooks/vars/koji-common.yml
@@ -2,7 +2,12 @@
 # Koji common
 koji_efs_mount_path: /mnt/koji
 koji_efs_fsid: whatever.amazonaws.com
+koji_efs_fs_ip_map:
+  us-east-2a: 10.x.x.x
+  us-east-2b: 10.x.x.x
+  us-east-2c: 10.x.x.x
 koji_efs_fs_type: efs
 koji_efs_fs_opts:
+  - _netdev
   - tls
   - iam
