--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -19,61 +19,88 @@ ipa002.rockylinux.org ansible_host=10.100.1.111
 ipa003.rockylinux.org ansible_host=10.100.1.112
 
 [ipaclients]
-build-a-box.rockylinux.org ansible_host=10.100.1.112
-idp001.rockylinux.org ansible_host=10.100.x.x
-chrony001.rockylinux.org ansiblehost=10.100.3.110
-chrony002.rockylinux.org ansiblehost=10.200.3.111
-git.rockylinux.org ansible_host=10.100.1.113
+#chrony001.rockylinux.org ansiblehost=10.100.3.110
+#chrony002.rockylinux.org ansiblehost=10.200.3.111
+#git.rockylinux.org ansible_host=10.100.1.113
+
+[ipaclients:children]
+idp
+sigul
+mbs
+koji
+rabbitmq
+bugtracker
+monitoringservers
+gitlabservers
+matomo
 
 [idp]
 idp001.rockylinux.org ansible_host=10.100.x.x
 idp002.rockylinux.org ansible_host=10.100.x.x
+
+[grafana]
+grafana.rockylinux.org ansible_host=10.100.xx.xx
+
+[graylogservers]
+graylog001.rockylinux.org ansible_host=10.100.xx.xx
+
+[monitoringservers:children]
+grafana
 
 [chronyservers]
 chrony001.rockylinux.org ansiblehost=10.100.3.110
 chrony002.rockylinux.org ansiblehost=10.200.3.111
 
 [gitlabservers]
-git.rockylinux.org ansible_host=10.100.1.113
+git.rockylinux.org ansible_host=10.xx.xx.xx
 
 # Koji System - These names and IP's are not permanent as some machines can be
 # in a different location. This is the case with ppc64le
+[buildsys:children]
+koji
+gitlabservers
+bugtracker
+
 [koji:children]
 kojihub
 kojid
-mqtt
+rabbitmq
 
 [kojihub]
-koji.boxbuild.rockylinux.org ansible_host=10.100.1.200
+koji.rockylinux.org ansible_host=10.xx.xx.xx
 
 [kojid]
-x86-01.boxbuild.rockylinux.org ansible_host=10.100.1.201
-x86-02.boxbuild.rockylinux.org ansible_host=10.100.1.202
-x86-repo.boxbuild.rockylinux.org ansible_host=10.100.1.203
-aarch64-01.boxbuild.rockylinux.org ansible_host=10.100.1.204
-aarch64-02.boxbuild.rockylinux.org ansible_host=10.100.1.205
-aarch64-03.boxbuild.rockylinux.org ansible_host=10.100.1.206
-aarch64-04.boxbuild.rockylinux.org ansible_host=10.100.1.207
-aarch64-05.boxbuild.rockylinux.org ansible_host=10.100.1.208
-aarch64-06.boxbuild.rockylinux.org ansible_host=10.100.1.209
-ppc64le-01.boxbuild.rockylinux.org ansible_host=10.100.1.210
-ppc64le-02.boxbuild.rockylinux.org ansible_host=10.100.1.211
-ppc64le-03.boxbuild.rockylinux.org ansible_host=10.100.1.212
-
-[mqtt]
-mqtt.boxbuild.rockylinux.org ansible_host=10.100.1.213
+x86build001.rockylinux.org ansible_host=10.100.xx.xx
+x86build002.rockylinux.org ansible_host=10.100.xx.xx
+x86build003.rockylinux.org ansible_host=10.100.xx.xx
+aarch64build001.rockylinux.org ansible_host=10.100.xx.xx
+aarch64build002.rockylinux.org ansible_host=10.100.xx.xx
+aarch64build003.rockylinux.org ansible_host=10.100.xx.xx
 
 [rabbitmq]
-rabbitmq01.rockylinux.org ansible_host=10.100.1.214
-rabbitmq02.rockylinux.org ansible_host=10.100.1.215
-rabbitmq03.rockylinux.org ansible_host=10.100.1.216
+rabbitmq001.rockylinux.org ansible_host=10.100.xx.xx
+rabbitmq002.rockylinux.org ansible_host=10.100.xx.xx
+rabbitmq003.rockylinux.org ansible_host=10.100.xx.xx
 
 [sigul:children]
 sigulbridge
 sigulserver
 
 [sigulbridge]
-sigul-bridge.rockylinux.org ansible_host=10.100.1.217
+sigul001.rockylinux.org ansible_host=10.100.xx.xx
 
 [sigulserver]
-sigul-server.rockylinux.org ansible_host=10.100.1.218
+sigul002.rockylinux.org ansible_host=10.100.xx.xx
+
+[mbs]
+mbs001.rockylinux.org ansible_host=10.100.xx.xx
+mbs002.rockylinux.org ansible_host=10.100.xx.xx
+
+[bugtracker]
+bugs.rockylinux.org ansible_host=10.100.xx.xx
+
+[matterbridge]
+matterbridge.rockylinux.org ansible_host=10.100.xx.xx
+
+[matomo]
+matomo.rockylinux.org ansible_host=10.100.xx.xx
