required some stuff

--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -42,6 +42,7 @@ collections:
   - name: ktdreyer.koji_ansible
   - name: netbox.netbox
   - name: community.aws
+  - name: containers.podman
 # - name: rockylinux.taiga
 #   source: https://github.com/rocky-linux/taiga-ansible.git
 #   type: git
