--- a/ansible/playbooks/role-rocky-kojid.yml
+++ b/ansible/playbooks/role-rocky-kojid.yml
@@ -6,8 +6,8 @@
   vars_files:
   - vars/vaults/encpass.yml
   - vars/common.yml
-  - vars/kojid.yml
-  - vars/koji-common.yml
+  - vars/production/kojid.yml
+  - vars/production/koji-common.yml
 
   # This is to try to avoid the handler issue in pre/post tasks
   handlers:
