--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -30,6 +30,10 @@ roles:
   - name: rockylinux.matterbridge
     src: https://github.com/NeilHanlon/ansible-role-matterbridge
     version: master
+  - name: rockylinux.wikijs
+    src: https://git.rockylinux.org/infrastructure/public/ansible/ansible-role-wikijs.git
+    scm: git
+    version: develop
 
 collections:
   # freeipa
@@ -43,6 +47,8 @@ collections:
   - name: netbox.netbox
   - name: community.aws
   - name: containers.podman
+  - name: nginxinc.nginx_core
+    version: 0.3.0
 # - name: rockylinux.taiga
 #   source: https://github.com/rocky-linux/taiga-ansible.git
 #   type: git
