--- a/ansible/inventories/production/hosts.ini
+++ b/ansible/inventories/production/hosts.ini
@@ -104,3 +104,6 @@ matterbridge.rockylinux.org ansible_host=10.100.xx.xx
 
 [matomo]
 matomo.rockylinux.org ansible_host=10.100.xx.xx
+
+[bugtracker]
+bugs.rockylinux.org ansible_host=10.100.xx.xx
