--- a/ansible/playbooks/tasks/openqa.yml
+++ b/ansible/playbooks/tasks/openqa.yml
@@ -141,11 +141,14 @@
   args:
     chdir: "{{ openqa_homedir }}/share/factory/iso/fixed"
 
-- name: Start OpenQA worker
+- name: Start {{ openqa_worker_count }} OpenQA workers
   ansible.builtin.systemd:
-    name: "openqa-worker@1"
+    name: "openqa-worker@{{ item }}"
     state: started
     enabled: true
+  # range 'end' parameter is exclusive, so add 1
+  loop: "{{ range(1, (openqa_worker_count|int + 1)) | list }}"
+  tags: start_workers
 
 - name: POST a job
   command: |
