--- a/ansible/roles/requirements.yml
+++ b/ansible/roles/requirements.yml
@@ -47,7 +47,7 @@ roles:
 collections:
   # freeipa
   - name: freeipa.ansible_freeipa
-    version: 0.3.6
+    version: 0.4.2
   - name: community.general
   - name: community.mysql
   - name: community.rabbitmq
@@ -56,6 +56,7 @@ collections:
   - name: ktdreyer.koji_ansible
   - name: netbox.netbox
   - name: community.aws
+  - name: community.libvirt
   - name: containers.podman
   - name: nginxinc.nginx_core
     version: 0.3.0
