--- a/ansible/playbooks/tasks/openqa.yml
+++ b/ansible/playbooks/tasks/openqa.yml
@@ -3,6 +3,8 @@
   yum:
     name: "{{ openqa_packages }}"
     state: present
+  tags:
+    - packages
 
 - name: Copy httpd configuration files
   copy:
@@ -16,6 +18,8 @@
     - openqa.conf
     - openqa-ssl.conf
   notify: restart_httpd
+  tags:
+    - configure
 
 - name: Template OpenQA configuration files
   template:
@@ -27,6 +31,8 @@
   loop:
     - openqa.ini
     - client.conf
+  tags:
+    - configure
 
 - name: Get service facts
   service_facts:
@@ -54,6 +60,8 @@
     name: httpd_can_network_connect
     state: true
     persistent: true
+  tags:
+    - configure
 
 - name: Enable and start OpenQA services
   systemd:
@@ -61,6 +69,8 @@
     state: started
     enabled: true
   loop: "{{ openqa_services }}"
+  tags:
+    - configure
 
 - name: Create openqa-vnc firewalld service
   template:
@@ -69,11 +79,15 @@
     owner: root
     group: root
     mode: "0644"
+  tags:
+    - configure
 
 - name: Load openqa-vnc firewalld service
   systemd:
     name: firewalld
     state: reloaded
+  tags:
+    - configure
 
 - name: Permit traffic for {{ item }} service
   ansible.posix.firewalld:
@@ -83,16 +97,22 @@
   loop:
     - http
     - openqa-vnc
+  tags:
+    - configure
 
 - name: Reload FirewallD
   systemd:
     name: firewalld
     state: reloaded
+  tags:
+    - configure
 
 - name: Check for existing repository
   stat:
     path: "{{ openqa_homedir }}/share/tests/rocky"
   register: rocky_testing_repo
+  tags:
+    - configure
 
 - name: Clone repository if it does not already exist
   git:
@@ -101,6 +121,8 @@
     repo: "{{ openqa_rocky_testing_repo }}"
     version: develop
   when: not rocky_testing_repo.stat.exists
+  tags:
+    - configure
 
 - name: Set owner/group/permissions on repo contents
   file:
@@ -109,6 +131,8 @@
     owner: "{{ openqa_user }}"
     group: "{{ openqa_group }}"
     mode: "u+rwX,g+rwX,o+rX,o-w"
+  tags:
+    - configure
 
 # fifloader.py will fail if the Demo user is not logged in
 - name: Authenticate to web UI the first time
@@ -128,6 +152,8 @@
     owner: "{{ openqa_user }}"
     group: "{{ openqa_group }}"
     mode: "0775"
+  tags:
+    - download_isos
 
 - name: Download ISOs
   get_url:
@@ -139,6 +165,8 @@
     tmp_dest: "/var/tmp"
     mode: "0644"
   loop: "{{ openqa_isos }}"
+  tags:
+    - download_isos
 
 - name: Start {{ openqa_worker_count }} OpenQA workers
   ansible.builtin.systemd:
@@ -147,7 +175,9 @@
     enabled: true
   # range 'end' parameter is exclusive, so add 1
   loop: "{{ range(1, (openqa_worker_count|int + 1)) | list }}"
-  tags: start_workers
+  tags:
+    - start_workers
+    - configure
 
 - name: POST a job
   command: |
