--- a/ansible/playbooks/init-rocky-openqa-developer-host.yml
+++ b/ansible/playbooks/init-rocky-openqa-developer-host.yml
@@ -23,7 +23,7 @@
 
   # This is to try to avoid the handler issue in pre/post tasks
   handlers:
-    - import_tasks: handlers/main.yml
+    - import_tasks: handlers/openqa.yml
 
   pre_tasks:
     - name: Check if ansible cannot be run here
